--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.3.1
 Django==3.1.5
 django-heroku==0.3.1
+gunicorn==21.2.0
+packaging==23.1
 psycopg2-binary==2.9.7
 pytz==2020.5
 sqlparse==0.4.1
